--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "proptech",
   "version": "0.1.0",
   "private": true,
+  "homepage": "/orders",
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
@@ -12,10 +13,12 @@
     "@types/react": "^18.2.13",
     "@types/react-dom": "^18.2.6",
     "axios": "^1.4.0",
+    "i18next": "^23.2.3",
     "react": "^18.2.0",
     "react-burger-menu": "^3.0.9",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-i18next": "^13.0.1",
     "react-jwt": "^1.2.0",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.13.0",
